# Synthetic-Imaging-Validation

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: tests.yml
docs/: data_loading.md  dimensionality.md  grouped_metrics.md  metric_selection.md  metrics.md
examples/: basic_usage.py  manifest_template.csv  validate_2d_data.py  validate_binary_masks.py  validate_nifti_pair.py
src/synthetic_imaging_validation/: __init__.py  evaluation.py
src/synthetic_imaging_validation/cli/: __init__.py  validate.py
src/synthetic_imaging_validation/io/: __init__.py  loading.py  pairing.py  preprocessing.py
src/synthetic_imaging_validation/metrics/: __init__.py  distribution.py  generative.py  grouped.py  image_similarity.py  segmentation.py  spatial.py
src/synthetic_imaging_validation/utils/: __init__.py  checks.py  normalization.py  visualization.py
tests/: conftest.py  test_cli.py  test_dimensionality.py  test_distribution_metrics.py  test_evaluation.py  test_grouped_metrics.py  test_image_similarity.py  test_io.py  test_segmentation_metrics.py  test_spatial_and_generative.py  test_utils_and_preprocessing.py
