[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthetic-imaging-validation"
version = "0.1.0"
description = "Reusable statistical and spatial validation metrics for synthetic medical imaging."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "scikit-image>=0.20",
    "nibabel>=5.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[project.optional-dependencies]
torch = ["torch>=2.0", "torchmetrics>=1.3"]
test = ["pytest>=7.0"]
viz = ["matplotlib>=3.7"]

[project.scripts]
synthetic-imaging-validate = "synthetic_imaging_validation.cli.validate:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
