[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthetic-imaging-validation"
version = "0.1.0"
description = "Reusable statistical and spatial validation metrics for synthetic medical imaging."
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "numpy>=1.26,<3.0",
    "scipy>=1.13,<2.0",
    "scikit-image>=0.24,<1.0",
    "nibabel>=5.3,<6.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[project.optional-dependencies]
torch = ["torch>=2.2,<3.0", "torchmetrics>=1.3,<2.0"]
test = ["pytest>=8.0,<10.0"]
viz = ["matplotlib>=3.8,<4.0"]

[project.scripts]
synthetic-imaging-validate = "synthetic_imaging_validation.cli.validate:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
markers = [
    "torch: tests requiring the optional PyTorch dependencies",
]
